--- a/tasks.json
+++ b/tasks.json
@@ -3,12 +3,28 @@
     "id": "1",
     "name": "Learn types in graphql",
     "description": "Learn types in graphql",
-    "deadline": "2020-01-01"
+    "deadline": "2020-01-01",
+    "projectId": 1
   },
   {
     "id": "2",
     "name": "Learn mutations in graphql",
     "description": "Learn types in graphql",
-    "deadline": "2020-01-01"
+    "deadline": "2020-01-01",
+    "projectId": 1
+  },
+  {
+    "id": "2",
+    "name": "Learn mutations in graphql",
+    "description": "Learn types in graphql",
+    "deadline": "2020-01-01",
+    "projectId": 1
+  },
+  {
+    "id": "2",
+    "name": "Learn mutations in graphql",
+    "description": "Learn types in graphql",
+    "deadline": "2020-01-01",
+    "projectId": 2
   }
 ]
